// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Breadcrumb Component Snapshot Tests matches snapshot for dark variant 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="flex items-center gap-1.5 text-sm text-slate-300"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-white"
      >
        <a
          class="transition-colors hover:text-foreground"
          href="/"
        >
          Home
        </a>
      </li>
      <li
        aria-hidden="true"
        class="flex items-center text-slate-500"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-white font-medium text-white"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground"
          role="link"
        >
          Dashboard
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb Component Snapshot Tests matches snapshot for light variant 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="flex items-center gap-1.5 text-sm text-slate-600"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900"
      >
        <a
          class="transition-colors hover:text-foreground"
          href="/"
        >
          Home
        </a>
      </li>
      <li
        aria-hidden="true"
        class="flex items-center text-slate-400"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900"
      >
        <a
          class="transition-colors hover:text-foreground"
          href="/products"
        >
          Products
        </a>
      </li>
      <li
        aria-hidden="true"
        class="flex items-center text-slate-400"
        role="presentation"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-right h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m9 18 6-6-6-6"
          />
        </svg>
      </li>
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900 font-medium text-slate-900"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground"
          role="link"
        >
          Current Page
        </span>
      </li>
    </ol>
  </nav>
</div>
`;

exports[`Breadcrumb Component Snapshot Tests matches snapshot with ellipsis and custom separator 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
    class="flex items-center gap-1.5 text-sm text-slate-600"
  >
    <ol
      class="flex flex-wrap items-center gap-1.5 break-words text-sm text-muted-foreground sm:gap-2.5"
    >
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900"
      >
        <a
          class="transition-colors hover:text-foreground"
          href="/"
        >
          Home
        </a>
      </li>
      <li
        aria-hidden="true"
        class="flex items-center text-slate-400"
        role="presentation"
      >
        <span>
          /
        </span>
      </li>
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900"
      >
        <span
          aria-hidden="true"
          class="flex h-9 w-9 items-center justify-center"
          role="presentation"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-ellipsis h-4 w-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
          <span
            class="sr-only"
          >
            More
          </span>
        </span>
      </li>
      <li
        aria-hidden="true"
        class="flex items-center text-slate-400"
        role="presentation"
      >
        <span>
          /
        </span>
      </li>
      <li
        class="inline-flex items-center gap-1.5 transition-colors hover:text-slate-900 font-medium text-slate-900"
      >
        <span
          aria-current="page"
          aria-disabled="true"
          class="font-normal text-foreground"
          role="link"
        >
          Current
        </span>
      </li>
    </ol>
  </nav>
</div>
`;
